--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+body {
+  background: #000000;
+  font-size: 10px;
+  font-family: sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.box {
+  position: relative;
+  display: block;
+  margin: auto;
+  margin-top: 4rem;
+  max-width: 500px;
+  height: 550px;
+  background: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.gameboy {
+  position: absolute;
+  background: #d3ccd3 linear-gradient(#d3ccd3 95%, #999 98%, #777 99%);
+  left: 15%;
+  width: 70%;
+  height: 100%;
+  border-radius: 20px;
+  border-bottom-right-radius: 80px;
+  overflow: hidden;
+  box-shadow: 2px 1px 3px rgba(0, 0, 0, 0.55);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.screen {
+  background: #767189;
+  box-shadow: 0 0 2px #514c65;
+  border-radius: 10px 10px 35px 10px;
+  height: 300px;
+  margin: 0.1em auto;
+}
+.game-screen {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  left: 10%;
+  top: 10%;
+  width: 80%;
+  height: 35%;
+  background: #9ca04c;
+  border-radius: 20px;
+  border-bottom-right-radius: 50px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) inset,
+    -2px -2px 10px rgba(0, 0, 0, 0.25) inset;
 }
