--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: #000000;
+  background: #999;
   font-size: 10px;
   font-family: sans-serif;
 }
@@ -14,21 +14,94 @@ body {
 }
 .gameboy {
   position: absolute;
-  background: #d3ccd3 linear-gradient(#d3ccd3 95%, #999 98%, #777 99%);
+  background: #d3ccd3 linear-gradient(#d3ccd3 90%, #999 95%, #777 98%);
   left: 15%;
   width: 70%;
   height: 100%;
   border-radius: 20px;
   border-bottom-right-radius: 80px;
   overflow: hidden;
-  box-shadow: 2px 1px 3px rgba(0, 0, 0, 0.55);
+  box-shadow: 2px 1px 3px 3px rgba(0.9, 0.55, 3, 0.55);
+}
+.top {
+  width: 100%;
+  display: flex;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.top > div {
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
+}
+.top > span {
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5) inset;
+  text-shadow: 2px 1px 2px rgba(0, 0, 0, 1);
+  color: #eee;
+  border-radius: 15px;
+  margin: 2px 7px;
+  padding: 3px 5px;
+  opacity: 0.25;
+}
+.screen-top {
+  margin: 0 15px;
+  height: 30px;
+  background: linear-gradient(
+    transparent 10px,
+    #7d1a4a 10px 12px,
+    transparent 12px 16px,
+    #35224e 16px 18px,
+    transparent 18px
+  );
+  position: relative;
+}
+.screen-top span {
+  font-family: Arial, sans-serif;
+  font-size: 10px;
+  color: #fff;
+  padding: 0 8px;
+  background: #767189;
+  position: absolute;
+  right: 30px;
+  top: 8px;
+}
+.screen .battery {
+  position: absolute;
+  top: 47%;
+  left: 3%;
+  width: 4%;
+  height: 5%;
+  border-radius: 50%;
+  animation-name: bateria;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+.battery p {
+  color: #f1f3f2;
+  font-size: 5px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  padding: 7px;
+}
+@keyframes bateria {
+  0% {
+    background-color: #7a7482;
+  }
+  100% {
+    background: #e4362e;
+  }
 }
 .screen {
-  background: #767189;
-  box-shadow: 0 0 2px #514c65;
-  border-radius: 10px 10px 35px 10px;
-  height: 300px;
-  margin: 0.1em auto;
+  position: absolute;
+  left: 10%;
+  top: 10%;
+  width: 80%;
+  height: 40%;
+  background: #7a7482;
+  border-radius: 20px;
+  border-bottom-right-radius: 50px;
 }
 .game-screen {
   display: flex;
@@ -39,10 +112,232 @@ body {
   left: 10%;
   top: 10%;
   width: 80%;
-  height: 35%;
+  height: 70%;
+  color: #0403088f;
+  text-transform: uppercase;
   background: #9ca04c;
-  border-radius: 20px;
-  border-bottom-right-radius: 50px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) inset,
     -2px -2px 10px rgba(0, 0, 0, 0.25) inset;
+}
+.marca {
+  position: absolute;
+  left: 8%;
+  top: 51%;
+  width: 80%;
+  height: 5%;
+}
+
+.marca p {
+  position: absolute;
+  top: -50%;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  font-weight: bold;
+  color: #2f328f;
+}
+
+.marca:after {
+  position: absolute;
+  top: 15%;
+  left: 32%;
+  content: "Game Boy";
+  color: #2f328f;
+  font-size: 1.15rem;
+  text-transform: uppercase;
+  font-style: italic;
+}
+
+.btn-rd {
+  background: linear-gradient(#b7acb1 -10%, #f1f3f2 130%);
+  border-radius: 30px;
+  padding: 3.4px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  margin: 50px 30px 0 0;
+  transform: rotate(-30deg);
+  position: absolute;
+  left: 60%;
+  top: 60%;
+}
+.btn-rd > button {
+  margin: 7px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #70121b;
+  cursor: pointer;
+}
+.btn-rd1::after {
+  content: "A";
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  font-size: 0.8rem;
+  bottom: -14px;
+}
+.btn-rd2::after {
+  content: "B";
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  font-size: 0.8rem;
+  bottom: -14px;
+}
+.controles {
+  position: absolute;
+  left: 2%;
+  top: 52%;
+  width: 80%;
+  height: 20%;
+}
+.cross {
+  background: linear-gradient(to bottom, #c4bfc6 -10%, #e2e0eb 130%);
+  border-radius: 50%;
+  padding: 10px;
+  width: 100px;
+  height: 100px;
+  margin: 30px;
+  display: grid;
+  grid-template-areas: ". up ." "left center right" ". down .";
+}
+
+.cross .cursor {
+  background: #040308;
+  border: 3px solid #040308;
+  box-shadow: 2px 4px 3px rgba(0, 0, 0, 0.6);
+  display: -webkit-box;
+  display: flex;
+}
+
+/* .cross .cursor.up,
+  .cross .cursor.left,
+  .cross .cursor.right {
+    border-top-color: #c5d8e1;    
+  } */
+
+.cross .cursor .circle {
+  border: 1px solid #111;
+  border-left: 0;
+  border-bottom: 0;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  background: conic-gradient(transparent 0 30%, rgba(255,255,255, 0.5) 40% 60%, transparent 70%)
+}
+
+.cross .cursor.up {
+  grid-area: up;
+}
+
+.cross .cursor.left {
+  grid-area: left;
+}
+
+.cross .cursor.center {
+  grid-area: center;
+}
+
+.cross .cursor.right {
+  grid-area: right;
+}
+
+.cross .cursor.down {
+  grid-area: down;
+}
+
+.cross .cursor:active {
+  box-shadow: none;
+  border-color: #111;
+}
+
+.cross .cursor.center:active {
+  border-color: #040308;
+}
+.buttons {
+  position: absolute;
+  bottom: 10%;
+  left: 22%;
+  width: 40%;
+  height: 10%;
+  transform: scale(0.8) rotate(-20deg);
+}
+
+.select-container {
+  top: 28%;
+  position: absolute;
+  left: 0;
+  width: 47%;
+  height: 35%;
+  border-radius: 50px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5) inset;
+  border-radius: 50px;
+}
+
+.start-container {
+  position: absolute;
+  top: 70%;
+  right: 0;
+  width: 47%;
+  height: 35%;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5) inset;
+  border-radius: 50px;
+}
+.start-btn {
+  cursor: pointer;
+}
+.select-btn,
+.start-btn {
+  position: absolute;
+  width: 85%;
+  height: 70%;
+  top: 5%;
+  left: 7.5%;
+  background: #7a7482;
+  border-radius: 50px;
+  transition: all 0.3s;
+}
+.start-btn::after {
+  bottom: -250%;
+  content: "start";
+  text-transform: uppercase;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  font-size: 0.8rem;
+}
+.select-btn::after {
+  bottom: -250%;
+  content: "select";
+  text-transform: uppercase;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  font-size: 0.8rem;
+}
+
+.audio {
+  position: absolute;
+  width: 110px;
+  right: 9px;
+  bottom: 25px;
+  transform: rotate(-30deg);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.audio::after {
+  content: "";
+  width: 500px;
+  height: 100px;
+  position: absolute;
+  background: #77777763;
+  top: 50px;
+}
+.audio .line {
+  width: 8px;
+  height: 60px;
+  border-radius: 10px;
+  background: #11111194;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5) inset;
 }
